--- a/playbook_create.yaml
+++ b/playbook_create.yaml
@@ -125,10 +125,16 @@
 
       - debug: msg="{{ install_kogito_service_account_result }}"
 
+      - name: Kogito use {{ nameSpace }}
+        shell: "kogito use-project {{ nameSpace }}"
+        register: kogito_use_project_result
+
+      - debug: msg="{{ kogito_use_project_result }}"
+
       - name: Deploy Drools-quarkus-example
         shell: "kogito deploy-service example-quarkus https://github.com/kiegroup/kogito-examples/ --context-dir=drools-quarkus-example"
         register: install_drools-quarkus_example_result
 
       - debug: msg="{{ quarkus_example_result }}"
-          
+
       - debug: msg="Your Kube Password is {{ kube_password }}"
