added rules fro etc/hosts

--- a/playbook_create.yaml
+++ b/playbook_create.yaml
@@ -18,6 +18,24 @@
     tasks:
       - debug: msg="Project Name {{ nameSpace }}"
 
+      - name: Check api in hosts
+        lineinfile:
+          path: /etc/hosts
+          line: 192.168.130.11   api.crc.testing
+          create: yes
+
+      - name: Check oauth in hosts
+        lineinfile:
+          path: /etc/hosts
+          line: 192.168.130.11   oauth-openshift.apps-crc.testing
+          create: yes
+
+      - name: Check console in hosts
+        lineinfile:
+          path: /etc/hosts
+          line: 192.168.130.11   console-openshift-console.apps-crc.testing
+          create: yes
+
       - name: Copy Kogito cli
         get_url:
           url: "https://github.com/kiegroup/kogito-cloud-operator/releases/download/v{{ kogito_tag }}/kogito-{{ kogito_tag }}-linux-amd64.tar.gz"
