--- a/playbook_start.yaml
+++ b/playbook_start.yaml
@@ -5,18 +5,26 @@
 
     vars:
       libvirt_version: "4.3.1"
+      ram: "16384" #MB   
       kube_password: "{{ lookup('file', '/home/{{ ansible_user_id }}/.crc/cache/crc_libvirt_{{ libvirt_version }}/kubeadmin-password') }}"
 
     vars_prompt:
       - name: "nameSpace"
         prompt: "Insert your Project Name/ NameSpace"
+      - name: "exampleProject"
+        default: "drools-quarkus-example"
+        prompt: "Insert the kogito example to deploy"
 
     tasks:
 
       - debug: msg="Project Name {{ nameSpace }}"
 
+      - name: Start CRC with {{ ram }}MB (~ 10 minutes)
+        shell: "crc start -m {{ ram }} -p ~/.crc/crc-pull-secret"
+
       - name: Login crc
         shell: "oc login -u kubeadmin -p {{ kube_password }} https://api.crc.testing:6443"
+        ignore_errors: yes 
 
       - name: Kogito use {{ nameSpace }}
         shell: "kogito use-project {{ nameSpace }}"
@@ -26,7 +34,7 @@
       - debug: msg="{{ kogito_use_project_result }}"
 
       - name: Deploy Drools-quarkus-example
-        shell: "kogito deploy-service example-quarkus https://github.com/kiegroup/kogito-examples/ --context-dir=drools-quarkus-example"
+        shell: "kogito deploy-service example-quarkus https://github.com/kiegroup/kogito-examples/ --context-dir={{exampleProject}}"
         register: install_drools_quarkus_example
         ignore_errors: yes
 
