--- a/playbook_start.yaml
+++ b/playbook_start.yaml
@@ -7,15 +7,28 @@
       libvirt_version: "4.3.1"
       ram: "16384" #MB   
       kube_password: "{{ lookup('file', '/home/{{ ansible_user_id }}/.crc/cache/crc_libvirt_{{ libvirt_version }}/kubeadmin-password') }}"
+      examples: "{{  lookup('file', '/tmp/examples.txt') }}"
 
     vars_prompt:
       - name: "nameSpace"
         prompt: "Insert your Project Name/ NameSpace"
-      - name: "exampleProject"
-        default: "drools-quarkus-example"
-        prompt: "Insert the kogito example to deploy"
+        default: "my-kogito-project"
+
+      - name: "example"
+        prompt: "Choose the example to deploy"
+        default: "\n{{ examples }}"
 
     tasks:
+      - import_tasks: playbook_pre_start.yaml
+
+      - name: "Download Kogito Examples pom"
+        get_url:
+          url: "https://raw.githubusercontent.com/kiegroup/kogito-examples/stable/pom.xml"
+          dest: "/tmp/examples_pom.xml"
+
+      #- name: Get Content Section
+      #  shell: xmllint --xpath '/*[local-name()="project"]/*[local-name()="modules"]' /tmp/examples_pom.xml > /tmp/examples.txt
+      #  register: xml
 
       - debug: msg="Project Name {{ nameSpace }}"
 
@@ -34,7 +47,7 @@
       - debug: msg="{{ kogito_use_project_result }}"
 
       - name: Deploy Drools-quarkus-example
-        shell: "kogito deploy-service example-quarkus https://github.com/kiegroup/kogito-examples/ --context-dir={{exampleProject}}"
+        shell: "kogito deploy-service {{ example }} https://github.com/kiegroup/kogito-examples/ --context-dir={{ example }}"
         register: install_drools_quarkus_example
         ignore_errors: yes
 
