--- a/playbook_create.yaml
+++ b/playbook_create.yaml
@@ -14,6 +14,7 @@
       - name: "nameSpace"
         default: "my-kogito-project"
         prompt: "Insert your Project Name/ NameSpace"
+        private: "no"
       - name: "PullSecret"
         prompt: "Insert your Pull secret"
 
