--- a/playbook_deploy.yaml
+++ b/playbook_deploy.yaml
@@ -1,55 +1,71 @@
 ---
-  - name: Start CRC 1.10.0 and deploy kogito examples
-    hosts: localhost
+- name: Start CRC and deploy kogito examples
+  hosts: localhost
 
-    vars:
-      libvirt_version: "4.4.3"
-      ram: "16384" #MB   
-      kube_password: "{{ lookup('file', '/home/{{ ansible_user_id }}/.crc/cache/crc_libvirt_{{ libvirt_version }}/kubeadmin-password') }}"
-      examples: "{{  lookup('file', '~/.crc/quarkus_examples.txt') }}"
-      examples_repo: "https://github.com/kiegroup/kogito-examples/"
+  vars:
 
-    vars_prompt:
-      - name: "nameSpace"
-        prompt: "Insert your Project Name/ NameSpace"
-        default: "my-kogito-project"
-        private: "no"
+    release_file: "https://mirror.openshift.com/pub/openshift-v4/clients/crc/latest/release-info.json"
+    ram: "15360" #MB
+    examples: "{{  lookup('file', '~/.crc/kogito-examples.txt') }}"
+    examples_repo: "https://github.com/kiegroup/kogito-examples/"
 
-      - name: "example"
-        prompt: "Choose the example to deploy"
-        default: "\n{{ examples }}"
-        private: "no"
+  vars_prompt:
 
-    tasks:
+    - name: "nameSpace"
+      prompt: "Insert your Project Name/ NameSpace"
+      default: "my-kogito-project"
+      private: "no"
 
-      - debug: msg="Project Name {{ nameSpace }}"
+    - name: "example"
+      prompt: "Choose the example to deploy"
+      default: "\n{{ examples }}"
+      private: "no"
 
-      - name: Start CRC with {{ ram }}MB (~ 10 minutes)
-        shell: "crc start -m {{ ram }} -p ~/.crc/crc-pull-secret"
+  pre_tasks:
 
-      - name: Login crc
-        shell: "oc login -u kubeadmin -p {{ kube_password }} https://api.crc.testing:6443"
-        ignore_errors: yes 
+    - name: read json
+      uri:
+        url: "{{ release_file }}"
+        return_content: yes
+      register: jsoncontent
 
-      - name: Kogito use {{ nameSpace }}
-        shell: "kogito use-project {{ nameSpace }}"
-        register: kogito_use_project_result
-        ignore_errors: yes
+    - set_fact:
+        openshiftVersion: "{{ jsoncontent.json.version.openshiftVersion }}"
+        register: openshiftVersion
 
-      - debug: msg="{{ kogito_use_project_result }}"
+    - debug: msg="Openshift version {{ openshiftVersion }}"
 
-      - name: Deploy {{ example }}
-        shell: "kogito deploy-service {{ example }} {{ examples_repo }} --context-dir={{ example }}"
-        register: install_drools_quarkus_example
-        ignore_errors: yes
+  tasks:
 
-      - debug: msg="{{ install_drools_quarkus_example }}"
+    - debug: msg="Project Name {{ nameSpace }}"
 
-      - debug: msg="Project Name {{ nameSpace }}"
+    - name: Start CRC with {{ ram }}MB (~ 10 minutes)
+      shell: "crc start -m {{ ram }} -p ~/.crc/crc-pull-secret"
 
-      - debug: msg="Your Kube Password is {{ kube_password }}"
+    - name: Login crc
+      shell: "oc login -u kubeadmin -p {{ kube_password }} https://api.crc.testing:6443"
+      ignore_errors: yes
 
-      - name: Open browser
-        shell: "crc console"
+    - name: Kogito use {{ nameSpace }}
+      shell: "kogito use-project {{ nameSpace }}"
+      register: kogito_use_project_result
+      ignore_errors: yes
 
+    - debug: msg="{{ kogito_use_project_result }}"
 
+    - name: Deploy {{ example }}
+      shell: "kogito deploy-service {{ example }} {{ examples_repo }} --context-dir={{ example }}"
+      register: install_drools_quarkus_example
+      ignore_errors: yes
+
+    - debug: msg="{{ install_drools_quarkus_example }}"
+
+    - debug: msg="Project Name {{ nameSpace }}"
+
+    - set_fact:
+        kube_password: "{{ lookup('file', '/home/{{ ansible_user_id }}/.crc/cache/crc_libvirt_{{ openshiftVersion }}/kubeadmin-password') }}"
+
+    - debug: msg="Your Kube Password is {{ kube_password }}"
+
+    - name: Open browser
+      shell: "crc console"
